example/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-service
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
